Fixed things that were broken i.e view on mobile

--- a/trggp/css/style.css
+++ b/trggp/css/style.css
@@ -101,10 +101,6 @@ header {
   position: relative;
 }
 
-.landing-wrapper {
-  padding: 20px 0;
-}
-
 nav {
   width: 100%;
   text-align: center;
@@ -250,13 +246,9 @@ caption {
   position: relative;
 }
 
-.content {
-    padding: 30px 0;
-}
-
 #intro-text {
-  max-width: 800px;
-  margin: 2em auto;
+  max-width: 50%;
+  margin: 8em auto;
 }
 
 #latest-news {
@@ -316,10 +308,6 @@ footer {
       position: relative;
     }
 
-    #intro-text {
-      margin: 2em;
-    }
-
 }
 
 @media only screen and (max-width: 900px) {
@@ -341,5 +329,21 @@ footer {
 
   nav li a {
     padding: 0 30px;
+  }
+
+  #intro-text {
+    max-width: 100%;
+    margin: 4em 1em;
+  }
+
+  .wrapper {
+    max-width: 100%;
+    margin: 4em 1em;
+  }
+
+  #latest-news {
+    max-width: 100%;
+    margin: 1em;
+    padding: 1em;
   }
 }
